# joinplex

./: .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  MAINFEST.in  README.md  SECURITY.md  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: build_lint_test.yml  lint_and_test.yml  lint_build_test.yml  pytest.yml  scorecards.yml  test_and_lint.yml
doc/: cheese_join.drawio  draft_interface_example.md  requirements.txt
doc/source/: conf.py  index.rst
doc/source/_static/examples/cheese_join/: flowchart_dark.drawio
doc/source/_static/examples/simple_join/: flowchart_dark.drawio  flowchart_light.drawio
doc/source/_static/reference/cheese_join/: flowchart_dark.drawio
doc/source/examples/: cheese_join.rst  simple_join.py  simple_join.rst
doc/source/reference/: cheese_join.rst
joinplex/: __init__.py
joinplex/core/pair/: __init__.py  pair.py
testing/: test_nothing.py
testing/core/pair/: test_pair_cls.py
