[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools_scm>=7",
]

[tool.black]
target-version = ['py38', 'py39', 'py310']
exclude = '''
(
  \.git
  | setup.py
)
'''

[tool.pylint.messages_control]
max-line-length = 88
disable = [
  "import-error", # Because we won't actually install packages for pre-commit
  "redefined-outer-name", # Because we use pytest fixtures
]
good-names = ["df"]
ignore-paths = ["^doc/.*$"]
