# Heavily based on the setup.cfg for pandas, permitted under its BSD-3-Clause license, which is
# shared by Joinplex:
# https://github.com/pandas-dev/pandas
[metadata]
name = joinplex
description = Advanced, multi-stage tabular joins
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/joinplex-dev/joinplex
author = The Joinplex Development Team
author_email = joinplex.dev@gmail.com
license = BSD-3-Clause
license_files = LICENSE
platforms = any
classifiers = # https://pypi.org/classifiers/
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
project_urls =
    Bug Tracker = https://github.com/joinplex-dev/joinplex/issues
    # Documentation = TODO
    Source Code = https://github.com/joinplex-dev/joinplex

[options]
packages = find:
install_requires =
    pandas>=1.0.0
python_requires = >=3.8
include_package_data = True
zip_safe = False

[options.extras_require]
test =
    hypothesis>=5.5.3
    pytest>=6.0
    pytest-xdist>=1.31

[build_ext]
inplace = True

[options.packages.find]
include = joinplex

[codespell]
# ignore-words-list =
ignore-regex = https://([\w/\.])+

[coverage:run]
branch = True
source = joinplex

[coverage:report]
ignore_errors = False
show_missing = True
# Regexes for lines to exclude from consideration
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

    # Don't complain if tests don't hit defensive assertion code:
    raise AssertionError
    raise NotImplementedError
    AbstractMethodError

    # Don't complain if non-runnable code isn't run:
    if __name__ == .__main__.:
    if TYPE_CHECKING:

[coverage:html]
directory = coverage_html_report
